--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-matplotlib
-numpy
-pytorch
-sklearn
+numpy==1.23.5 ; python_version >= "3.9" and python_version < "4.0"
+nvidia-cublas-cu11==11.10.3.66 ; python_version >= "3.9" and python_version < "4.0"
+nvidia-cuda-nvrtc-cu11==11.7.99 ; python_version >= "3.9" and python_version < "4.0"
+nvidia-cuda-runtime-cu11==11.7.99 ; python_version >= "3.9" and python_version < "4.0"
+nvidia-cudnn-cu11==8.5.0.96 ; python_version >= "3.9" and python_version < "4.0"
+setuptools==65.6.3 ; python_version >= "3.9" and python_version < "4.0"
+torch==1.13.0 ; python_version >= "3.9" and python_version < "4.0"
+typing-extensions==4.4.0 ; python_version >= "3.9" and python_version < "4.0"
+wheel==0.38.4 ; python_version >= "3.9" and python_version < "4.0"
